--- a/src/colors.css
+++ b/src/colors.css
@@ -1,5 +1,9 @@
 :root{
- --dark-grey: #454545;
+ /* --dark-grey: #454545; */
+  --dark-grey: #454545;
  --theme-red: #d82034;
---theme-button:var(--theme-red)
+ --light-grey:#969696;
+
+--theme-button:var(--theme-red);
+  --max-width: 1400px;
 }
