--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,13 +1,42 @@
 .home__about-finanzplanung {
   display: grid;
-  grid-template-columns: 1fr 25vw;
+  grid-template-columns: 1fr 1fr;
+  margin-left: 5vw;
+
 }
 
 .home__text {
   margin-right: 10vw;
+}
+
+.home__about-finazplannung-image {
+  margin-top: 1.4rem;
+  width: 100%;
+}
+
+.h1 {
   margin-left: 5vw;
 }
 
-.home__image {
+.home__miriam {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  background-color: white;
+  padding: 4rem;
+  margin: 2rem;
+   border-radius: 20px;
+   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.home__miriam-image {
+  object-fit: contain;
   width: 100%;
+  border-radius: 50%;
+  border-color: var(--theme-red);
+  /* border-style: solid; */
+  border-width: 5px;
+}
+
+.home__miriam-text {
+  margin-left: 2rem;
 }
