--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,7 +15,9 @@
 
 .home__about-finazplannung-image {
   margin-top: 1.4rem;
-  width: 100%;
+
+  max-height: 100%;
+  object-fit: cover;
 }
 
 .h1 {
