--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,14 @@ a {
   text-decoration: none;
 }
 
+a:hover{
+  text-decoration: none;
+} 
+
+a:visited {
+  text-decoration: none;
+}
+
 ul {
   padding: 0;
   margin: 0;
