--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,7 +6,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-left: 5vw;
-
 }
 
 .home__text {
@@ -15,8 +14,7 @@
 
 .home__about-finazplannung-image {
   margin-top: 1.4rem;
-
-  max-height: 100%;
+  max-height: 400px;
   object-fit: cover;
 }
 
@@ -30,8 +28,8 @@
   background-color: white;
   padding: 4rem;
   margin: 2rem;
-   border-radius: 20px;
-   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  border-radius: 20px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .home__miriam-image {
