--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -8,9 +8,6 @@
   padding-left: 16px;
   padding-right: 16px;
 background-color: var(--theme-button);
-
-
-;
 border-radius: 13px;
 text-decoration: none;
   font-family: 'Josefin Sans';
@@ -21,4 +18,8 @@ text-decoration: none;
 
 .button:hover  {
   box-shadow: 0 3px 6px black;
+}
+
+.button a:visited {
+   color:white;
 }
