--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
 .home__about-finanzplanung {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-left: 5vw;
+  margin-bottom: 5vw;
 }
 
 .home__text {
@@ -27,7 +27,7 @@
   grid-template-columns: 250px 1fr;
   background-color: white;
   padding: 4rem;
-  margin: 2rem;
+  margin-top: 2rem;
   border-radius: 20px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
