--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -12,6 +12,7 @@ border-radius: 13px;
 text-decoration: none;
   font-family: 'Josefin Sans';
   font-size: 1.2rem;
+  letter-spacing: 0.1rem;
   white-space: pre-wrap;
 }
 
